--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,10 @@ version: '3'
 services:
   db:
     image: mysql:5.5
+    volumes:
+      - mysql_data:/var/lib/mysql
     environment:
+      MYSQL_ROOT_USER: root
       MYSQL_ROOT_PASSWORD: 'password'
     ports:
       - "4306:3306"
@@ -11,8 +14,17 @@ services:
     build: .
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
-      - .:/app_name
+      - .:/protospace-37445:cached
+      - bundle:/myapp/vendor/bundle 
+      - /protospace-37445/tmp
+      - node_modules:/myapp/node_modules
     ports:
       - "3000:3000"
     depends_on:
       - db
+    stdin_open: true
+    tty: true
+  volumes: 
+    mysql_data:
+    bundle: 
+    node_modules:
